package com.example.cd;

public interface Observateur {
    public void reagir();
}
