@startuml diag
hide empty members

class Carte {
    {field} String question
    {field} String reponse
    {method} String getQuestion()
    {method} String getReponse()
    {method} void setQuestion(String question)
    {method} void setReponse(String reponse)
}

class PaquetDeCartes {
    {field} String titre
    {field} String auteur
    {method} String getTitre()
    {method} ArrayList<Carte> getCartes()
    {method} void setTitre(String titre)
    {method} void setCartes(ArrayList<Carte> cartes)
}



interface Observateur{
    {method} void reagir()
}

class SujetObserve{
    {method} void ajouterObservateur()
    {method} void notifierObservateur()
}

class AccueilControleur{

}

class CreationControleur{

}
class EntrainementControleur{

}

class GestionControleur{

}
class GlobalControleur{

}

interface Initializable{
    {method} void initialize()
}

PaquetDeCartes "*" -- "*" Carte : contient
AccueilControleur --"*" PaquetDeCartes
CreationControleur --"1" PaquetDeCartes
EntrainementControleur --"1" PaquetDeCartes
GestionControleur --"1" PaquetDeCartes
SujetObserve <|-- PaquetDeCartes
SujetObserve "1"--"*" Observateur
AccueilControleur ..|> Observateur
AccueilControleur ..|> Initializable
CreationControleur ..|> Observateur
CreationControleur ..|> Initializable
EntrainementControleur ..|> Observateur
EntrainementControleur ..|> Initializable
GestionControleur ..|> Observateur
GestionControleur ..|> Initializable
GlobalControleur --"1" GestionControleur
GlobalControleur --"1" EntrainementControleur
GlobalControleur --"1" CreationControleur
GlobalControleur --"1" AccueilControleur
GlobalControleur --"*" PaquetDeCartes
@enduml


